kube01/apps/ai/whisper-asr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-asr-ingress
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.test.nf.lab
spec:
  rules:
  - host: asr.test.nf.lab
    http:
      paths:
      - backend:
          service:
            name: whisper-asr-svc
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - asr.test.nf.lab
    secretName: asr-cert-tls
